# ultracode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_nots/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_chunking  ultracode
build_nots/Testing/Temporary/: CTestCostData.txt
docs/: mvp-plan.md
src/: chunk.hpp  chunk_extractor.cpp  chunk_extractor.hpp  config.cpp  index_store.cpp  index_store.hpp  main.cpp  ollama_client.cpp  ollama_client.hpp  repo_scanner.cpp  repo_scanner.hpp  retriever.cpp  retriever.hpp  ts_extractor.cpp  ts_extractor.hpp
src/app/: application.cpp  application.hpp  config.cpp  config.hpp  diagnose.cpp  diagnose.hpp
src/cli/: command_router.cpp  command_router.hpp
src/edit/: patch_workflow.cpp  patch_workflow.hpp
src/index/: index_store.cpp  index_store.hpp  repo_scanner.cpp  repo_scanner.hpp
src/llm/: ollama_client.cpp  ollama_client.hpp
src/parsing/: chunk.hpp  chunk_extractor.cpp  chunk_extractor.hpp  ts_extractor.cpp  ts_extractor.hpp
src/retrieval/: retriever.cpp  retriever.hpp
src/session/: chat_session.cpp  chat_session.hpp
src/support/: utils.hpp
src/tui/: markdown_renderer.cpp  markdown_renderer.hpp  tui_app.cpp  tui_app.hpp
src/tui/components/: status_bar.cpp  status_bar.hpp
src/tui/views/: chat.cpp  chat.hpp  context.cpp  context.hpp  index.cpp  index.hpp  patches.cpp  patches.hpp
src/vcs/: git_diff.cpp  git_diff.hpp
tests/: test_chunking.cpp
tests/fixtures/devforge/: go.mod
tests/fixtures/devforge/api/: app.py
tests/fixtures/devforge/api/middleware/: auth.py  ratelimit.py
tests/fixtures/devforge/api/models/: artifact.py  project.py  user.py
tests/fixtures/devforge/api/routes/: artifacts.py  projects.py  users.py
tests/fixtures/devforge/cmd/migrate/: main.go
tests/fixtures/devforge/cmd/server/: main.go
tests/fixtures/devforge/cmd/worker/: main.go
tests/fixtures/devforge/config/: Dockerfile  Makefile  default.yaml  docker-compose.yml  production.yaml  staging.yaml
tests/fixtures/devforge/config/schemas/: project.json  user.json
tests/fixtures/devforge/docs/: api-reference.md  architecture.md  changelog.md  contributing.md  setup.md
tests/fixtures/devforge/docs/rfcs/: 001-oauth.md  002-events.md
tests/fixtures/devforge/internal/auth/: oauth.go  session.go  token.go
tests/fixtures/devforge/internal/models/: types.go
tests/fixtures/devforge/internal/queue/: dispatcher.go  retry.go
tests/fixtures/devforge/internal/store/: memory.go  sqlite.go
tests/fixtures/devforge/lib/: CMakeLists.txt
tests/fixtures/devforge/lib/compression/: lz4_wrap.cpp  lz4_wrap.hpp  zlib_wrap.cpp  zlib_wrap.hpp
tests/fixtures/devforge/lib/crypto/: cipher.cpp  cipher.hpp  hasher.cpp  hasher.hpp
tests/fixtures/devforge/lib/format/: json.cpp  json.hpp  msgpack.cpp  msgpack.hpp
tests/fixtures/devforge/scripts/: bench.sh  gen_types.py  migrate.sh  seed_db.py
tests/fixtures/devforge/tests/integration/: test_api.py  test_e2e.py
tests/fixtures/devforge/tests/unit/: test_dispatcher.go  test_user.py
tests/fixtures/devforge/web/components/: ArtifactViewer.tsx  Dashboard.tsx  ProjectList.tsx
tests/fixtures/devforge/web/hooks/: useAuth.ts  useWebSocket.ts
tests/fixtures/devforge/web/services/: api.ts  auth.ts
tests/fixtures/devforge/web/utils/: format.ts  validation.ts
tests/fixtures/sample_repo/: README.md  app.ts  hello.cpp  hello.py  main.go
